<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/allBackgr"
    tools:context="com.example.a77_da_000.brick.ControlActivity">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        tools:context="com.example.a77_da_000.brick.ControlActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor3"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/helpButton"
            app:layout_constraintRight_toRightOf="@+id/helpButton"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor2"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/mot2btn"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/ideas"
            app:layout_constraintLeft_toLeftOf="@+id/led2btn"
            app:layout_constraintTop_toTopOf="@+id/ideasButton"
            app:srcCompat="@drawable/motor" />

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/ideas"
            app:layout_constraintLeft_toLeftOf="@+id/dataButton"
            app:layout_constraintTop_toTopOf="@+id/ideasButton"
            app:srcCompat="@drawable/motor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/motor1"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/ideasButton"
            app:layout_constraintRight_toRightOf="@+id/ideasButton"
            app:layout_constraintTop_toBottomOf="@+id/ideasButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led3"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/dataButton"
            app:layout_constraintRight_toRightOf="@+id/dataButton"
            app:layout_constraintTop_toTopOf="@+id/led2txt" />

        <TextView
            android:id="@+id/led2txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led2"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageButton
            android:id="@+id/led1btn"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/code"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/led2btn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/led" />

        <ImageButton
            android:id="@+id/ideasButton"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/motor1"
            app:layout_constraintLeft_toLeftOf="@+id/led1btn"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/motor" />

        <ImageButton
            android:id="@+id/dataButton"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/data"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toRightOf="@+id/led2btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/led" />

        <ImageButton
            android:id="@+id/led2btn"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/remote"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/led" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/led1"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/led1btn"
            app:layout_constraintRight_toRightOf="@+id/led1btn"
            app:layout_constraintTop_toBottomOf="@+id/led1btn" />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>