<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/allBackgr"
    tools:context="com.example.a77_da_000.brick.MainActivity"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            tools:layout_editor_absoluteY="23dp"
             />

        <TextView
            android:id="@+id/statustxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/status_not_connected"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            tools:layout_editor_absoluteY="23dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        tools:context="com.example.a77_da_000.brick.MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/helpButton"
            app:layout_constraintRight_toRightOf="@+id/helpButton"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutors"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/tutorButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/ideas"
            app:layout_constraintLeft_toLeftOf="@+id/remoteButton"
            app:layout_constraintTop_toTopOf="@+id/ideasButton"
            app:srcCompat="@drawable/ic_description_white_48dp" />

        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/ideas"
            app:layout_constraintLeft_toLeftOf="@+id/dataButton"
            app:layout_constraintTop_toTopOf="@+id/ideasButton"
            app:srcCompat="@drawable/ic_help_outline_white_48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ideas"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/ideasButton"
            app:layout_constraintRight_toRightOf="@+id/ideasButton"
            app:layout_constraintTop_toBottomOf="@+id/ideasButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/dataButton"
            app:layout_constraintRight_toRightOf="@+id/dataButton"
            app:layout_constraintTop_toTopOf="@+id/led2txt" />

        <TextView
            android:id="@+id/led2txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remote"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageButton
            android:id="@+id/codeButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/code"
            app:layout_constraintRight_toLeftOf="@+id/remoteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_code_white_48dp" />

        <ImageButton
            android:id="@+id/ideasButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/ideas"
            app:layout_constraintLeft_toLeftOf="@+id/codeButton"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_lightbulb_outline_white_48dp" />

        <ImageButton
            android:id="@+id/dataButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/data"
            app:layout_constraintLeft_toRightOf="@+id/remoteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_insert_chart_white_48dp" />

        <ImageButton
            android:id="@+id/remoteButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/remote"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_remote_white_48dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/code"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/codeButton"
            app:layout_constraintRight_toRightOf="@+id/codeButton"
            app:layout_constraintTop_toBottomOf="@+id/codeButton" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>